--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yarr-web-app",
-  "homepage": "http://BarArbel.github.io/YARR/yarr-web-app",
+  "homepage": "http://YARR-Shenkar.github.io/Yarr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
